feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -33,12 +33,20 @@ cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry |
 gitlab = gitlab-org/charts/gitlab-runner
 use_max_tag = true
 
-[Jira]
+[Jira-Standard]
 # https://github.com/stedolan/jq/wiki/FAQ#general-questions
-cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | .[0].version'
+# https://developer.atlassian.com/server/framework/atlassian-sdk/early-access-programs/
+# https://my.atlassian.com/download/feeds/archived/jira-software.json
+cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Standard")) | .[0].version'
 
-[Confluence]
-cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | .[0].version'
+[Jira-Enterprise(Long Term Support)]
+cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Enterprise")) | .[0].version'
+
+[Confluence-Standard]
+cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Standard")) | .[0].version'
+
+[Confluence-Enterprise(Long Term Support)]
+cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Enterprise")) | .[0].version'
 
 [UniFi-Network-Controller]
 cmd = curl -s 'https://www.ui.com/download/?software=2451&eula=true' -H 'authority: www.ui.com' -H 'pragma: no-cache' -H 'cache-control: no-cache' -H 'x-requested-with: XMLHttpRequest' --compressed | jq --raw-output '.download_url | match("[\\d.]+").string'
