feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -39,13 +39,13 @@ use_max_tag = true
 # https://my.atlassian.com/download/feeds/archived/jira-software.json
 cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Standard")) | .[0].version'
 
-[Jira-Enterprise(Long Term Support)]
+[Jira-Enterprise(Long-Term-Support)]
 cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Enterprise")) | .[0].version'
 
 [Confluence-Standard]
 cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Standard")) | .[0].version'
 
-[Confluence-Enterprise(Long Term Support)]
+[Confluence-Enterprise(Long-Term-Support)]
 cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | map(select(.edition=="Enterprise")) | .[0].version'
 
 [UniFi-Network-Controller]
