feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -436,3 +436,45 @@ npm = @dcloudio/uni-h5-ui
 
 [@vue/cli]
 npm = @vue/cli
+
+; --------------------------------------------------
+; obsidian
+[obsidian-theme-minimal]
+github = kepano/obsidian-minimal
+use_latest_release = true
+
+[obsidian-plugin-minimal-theme-settings]
+github = kepano/obsidian-minimal-settings
+use_latest_release = true
+
+[obsidian-plugin-sliding-panes]
+github = deathau/sliding-panes-obsidian
+use_latest_release = true
+
+[obsidian-plugin-calendar]
+github = liamcain/obsidian-calendar-plugin
+use_latest_release = true
+
+[obsidian-plugin-advanced-tables]
+github = tgrosinger/advanced-tables-obsidian
+use_latest_release = true
+
+[obsidian-plugin-note-refactor]
+github = lynchjames/note-refactor-obsidian
+use_latest_release = true
+
+[obsidian-plugin-paste-url-into-selection]
+github = denolehov/obsidian-url-into-selection
+use_latest_release = true
+
+[obsidian-plugin-editor-syntax-highlight]
+github = deathau/cm-editor-syntax-highlight-obsidian
+use_latest_release = true
+
+[obsidian-plugin-templater]
+github = SilentVoid13/Templater
+use_latest_release = true
+
+[obsidian-plugin-hider]
+github = kepano/obsidian-hider
+use_latest_release = true
