feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -99,6 +99,10 @@ use_max_tag = true
 github = jumpserver/jumpserver
 use_latest_release = true
 
+[jumpserver-installer]
+github = jumpserver/installer
+use_latest_release = true
+
 [alfred-vscode]
 github = kbshl/alfred-vscode
 use_latest_release = true
