feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -344,6 +344,10 @@ cmd = curl -s 'https://daisydiskapp.com/downloads/appcastReleaseNotes.php?appEdi
 github = obsidianmd/obsidian-releases
 use_latest_release = true
 
+[kitty]
+github = kovidgoyal/kitty
+use_latest_release = true
+
 ; --------------------------------------------------
 ; Apple
 ; OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq -n 'env.REGEX'
