feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -486,3 +486,18 @@ use_latest_release = true
 [obsidian-plugin-hider]
 github = kepano/obsidian-hider
 use_latest_release = true
+
+; --------------------------------------------------
+; Chia
+
+[Chia-blockchain]
+github = Chia-Network/chia-blockchain
+use_latest_release = true
+
+[hpool-chia-miner]
+github = hpool-dev/chia-miner
+use_latest_release = true
+
+[hpool-chia-plotter]
+github = hpool-dev/chia-plotter
+use_latest_release = true
