feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -501,3 +501,19 @@ use_latest_release = true
 [hpool-chia-plotter]
 github = hpool-dev/chia-plotter
 use_latest_release = true
+
+[chia_plot_manager]
+github = rjsears/chia_plot_manager
+use_latest_release = true
+
+[plotman]
+github = ericaltendorf/plotman
+use_latest_release = true
+
+[Swar-Chia-Plot-Manager]
+github = swar/Swar-Chia-Plot-Manager
+use_latest_release = true
+
+[plotng]
+github = maded2/plotng
+use_latest_release = true
