feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -123,6 +123,14 @@ use_latest_release = true
 github = grafana/grafana
 use_latest_release = true
 
+[YOURLS]
+github = YOURLS/YOURLS
+use_latest_release = true
+
+[shlink]
+github = shlinkio/shlink
+use_latest_release = true
+
 
 ; --------------------------------------------------
 ; macOS Apps
