feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -426,6 +426,12 @@ pypi = kombu
 [ansible]
 pypi = ansible
 
+[cryptofeed]
+pypi = cryptofeed
+
+[cryptostore]
+pypi = cryptostore
+
 ; --------------------------------------------------
 ; npm packages
 [uview-ui]
