chore: change workflow

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,12 @@ on:
       - master
     paths:
       - 'Dockerfile'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'Dockerfile'
+      - '.github/workflows/docker-publish.yml'
 
 env:
   IMAGE_NAME: nvchecker
