--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,11 +26,8 @@ jobs:
       packages: write
 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Log in to the GitHub Container registry
         uses: docker/login-action@v1
