--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -52,10 +52,10 @@ jobs:
           LOG=$(cat ${{ env.LOG_FILE }}) \
           RESULT=$(cat result.tmp) \
           DATE=$(date +"%Y-%m-%d") \
-          echo $LOG \
+          && echo $LOG \
           && echo $RESULT \
           && echo $DATE \
-          [[ ! -z $RESULT ]] \
+          && [[ ! -z $RESULT ]] \
           && curl \
             -s \
             --user 'api:${{ secrets.MAILGUN_API_KEY }}' \
